# OSlabs-3rd-sem

./: .gitignore  README.md
cw/src/: client.cpp  game_configuration.hpp  server.cpp  session_manager.cpp
lab1/: CMakeLists.txt  README.md  parent.c
lab1/src/: child1.c  child2.c  parent.c  string.h
lab2/: CMakeLists.txt  README.md  a.out  bitonic_sort.cpp  bitonic_sort_2thr.cpp  bitonic_sort_4thr.cpp  bitonic_sort_parallel.cpp  generator.hpp
lab2/src/: bitonic_sort_parallel.cpp  generator.cpp
lab3/: CMakeLists.txt
lab3/src/: child1.c  child2.c  mstring.c  parent.c  string.h
lab4/src/: Makefile  compile_main.c  dynamic  dynamic_main.c  foos.h  linking_main.c  linking_realization1  linking_realization2  realization1.c  realization2.c
lab5-7/: CMakeLists.txt
lab5-7/include/: socket.hpp  topology.hpp
lab5-7/src/: calculation_node.cpp  calculator_node.cpp  control_node.cpp  controller_node.cpp  socket.cpp  topology.cpp
